// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:button-group with btnActiveLevel 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="type"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  选项
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__ButtonGroup __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <button
              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--warning __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default __AMIS_COMPONENT_CLASS_PREFIX__ButtonGroup-button--active"
              type="button"
            >
              <span>
                Option A
              </span>
            </button>
            <button
              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
              type="button"
            >
              <span>
                Option B
              </span>
            </button>
            <button
              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--light __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
              type="button"
            >
              <span>
                Option C
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:button-group with tiled 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  多选
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__ButtonGroup __AMIS_COMPONENT_CLASS_PREFIX__ButtonGroup--tiled __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <button
              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
              type="button"
            >
              <span>
                Option A
              </span>
            </button>
            <button
              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
              type="button"
            >
              <span>
                Option B
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:button-group with vertical 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  多选
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__ButtonGroup __AMIS_COMPONENT_CLASS_PREFIX__ButtonGroup--vertical __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <button
              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
              type="button"
            >
              <span>
                Option A
              </span>
            </button>
            <button
              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
              type="button"
            >
              <span>
                Option B
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:button-group:multiple clearable 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  多选
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__ButtonGroup __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <button
              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default __AMIS_COMPONENT_CLASS_PREFIX__ButtonGroup-button--active"
              type="button"
            >
              <span>
                Option A
              </span>
            </button>
            <button
              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
              type="button"
            >
              <span>
                Option B
              </span>
            </button>
          </div>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  当前值
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-static"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control"
            >
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
              >
                a
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:button-group:multiple clearable 2`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  多选
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__ButtonGroup __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <button
              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default __AMIS_COMPONENT_CLASS_PREFIX__ButtonGroup-button--active"
              type="button"
            >
              <span>
                Option A
              </span>
            </button>
            <button
              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default __AMIS_COMPONENT_CLASS_PREFIX__ButtonGroup-button--active"
              type="button"
            >
              <span>
                Option B
              </span>
            </button>
          </div>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  当前值
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-static"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control"
            >
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
              >
                a,b
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:button-group:multiple clearable 3`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  多选
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__ButtonGroup __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <button
              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default __AMIS_COMPONENT_CLASS_PREFIX__ButtonGroup-button--active"
              type="button"
            >
              <span>
                Option A
              </span>
            </button>
            <button
              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
              type="button"
            >
              <span>
                Option B
              </span>
            </button>
          </div>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  当前值
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-static"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control"
            >
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
              >
                a
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:button-group-select 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  单选
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__ButtonGroup __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <button
              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
              type="button"
            >
              <span>
                Option A
              </span>
            </button>
            <button
              class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
              type="button"
            >
              <span>
                Option B
              </span>
            </button>
          </div>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  当前值
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-static"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control"
            >
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
              >
                <span
                  class="text-muted"
                >
                  -
                </span>
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
